; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_failslab.c_should_failslab.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_failslab.c_should_failslab.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }

@__GFP_NOFAIL = common dso_local global i32 0, align 4
@failslab = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@__GFP_WAIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @should_failslab(i64 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @__GFP_NOFAIL, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %23

11:                                               ; preds = %2
  %12 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @failslab, i32 0, i32 1), align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %11
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* @__GFP_WAIT, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %14
  store i32 0, i32* %3, align 4
  br label %23

20:                                               ; preds = %14, %11
  %21 = load i64, i64* %4, align 8
  %22 = call i32 @should_fail(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @failslab, i32 0, i32 0), i64 %21)
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %20, %19, %10
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @should_fail(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
